Listing and preparing for downloading.

--- a/upload-ui/src/app/app.component.html
+++ b/upload-ui/src/app/app.component.html
@@ -1,6 +1,21 @@
-<p *ngFor="let alert of alerts">
-  <ngb-alert [type]="alert.type" (closed)="close(alert)">{{ alert.message }}</ngb-alert>
-</p>
-<p>
-  <button type="button" class="btn btn-primary" (click)="reset()">Reset</button>
-</p>
+<div class="container">
+  <button class="btn btn-success" (click)="getAllFiles()">Get All Files</button>
+  <pre class="font-size--small">{{files | json}}</pre>
+  <hr>
+  <form [formGroup]="downloadForm" (ngSubmit)="onRequestFile()">
+    <div class="row">
+      <div class="col-12">
+        <h2>Download File</h2>
+      </div>
+      <div class="form-group col-md-7">
+        <label for="inputFileName">File Name</label>
+        <input type="text" class="form-control" formControlName="fileName" id="inputFileName" aria-describedby="fileNameHelp" placeholder="File Name">
+      </div>
+      <div class="col-md-5 d-flex align-items-end">
+        <div>
+          <button class="mt-2 mt-lg-0" type="submit" [disabled]="!downloadForm.valid" class="btn btn-primary">Download</button>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
